made the changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=chat
+
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb+srv://Nikhil8810:Nikhil8810*@chat.hyf00r5.mongodb.net/?retryWrites=true&w=majority&appName=chat
+spring.data.mongodb.database=chat
+
+# MongoDB connection pool settings
+spring.data.mongodb.auto-index-creation=true
